fixes invisible radio buttons and hover effect

--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,9 @@ html, body {
     cursor: pointer;
     border-radius: 25px;
     position: relative;
+    left: 19%
 }
-#hide1 {
-    left: 30%
-}
-#hide2 {
-    left: 30%
-}
+
 button {
     background-color: pink;
     border: none;
@@ -68,4 +64,22 @@ button {
 }
 .title {
     text-align: center;
+}
+[type=radio] { 
+    position: absolute;
+    opacity: 1;
+}
+[type=radio] { 
+    position: absolute;
+    opacity: 0;
+}
+[type=radio]:checked + img {
+    -ms-transform: scale(1.3); /* IE */
+    -moz-transform: scale(1.3); /* FF */
+    -webkit-transform: scale(1.3); /* Safari and Chrome */
+    -o-transform: scale(1.3); /* Opera */
+    transform: scale(1.2);
+}
+[type=radio]:hover + img {
+    transform: scale(1.2);
 }
